--- a/project.html
+++ b/project.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Online Resume</title>
+    <title>Project</title>
 </head>
+
 <body>
     <div id="head">
         <a href="index.html"><h1>Kai Caothien</h1></a>
@@ -17,29 +18,29 @@
         <a href="resume.html"><div class="items">Resume</div></a>
     </div>
     <div class="subtitle">
-        <h2>About Me</h2>
+        <h2>Project</h2>
     </div>
-    <div class="paragraph">
+    <div id = "div3">
+        <h3>Project 1</h3>
+        <h3>Project 2</h3>
+    </div>
+    <div id="input">
+        <iframe src="" width="100%" height="500px"></iframe>
+        <iframe src="" width="100%" height="500px"></iframe>
+    </div>
+    <div id="div5">
+        <p>Link to project 1 <a href="resume.pdf">here</a>. Click and download it.</p>
+        <p>Link to project 2 <a href="resume.pdf">here</a>. Click and download it.</p>
+    </div>
+    <div id = "div4">
         <p>
+            Project Description<br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet felis non tempor mattis. Etiam hendrerit, diam non lobortis tempor, nisl tellus rhoncus nulla, id efficitur neque ex sit amet lacus. Nam quis nunc neque. In tristique purus nunc, ut sagittis augue euismod et. Curabitur varius placerat sapien id euismod. Nulla eu porta leo, quis rhoncus leo. Etiam facilisis commodo elit, eget rhoncus nunc iaculis et. Aenean feugiat, ligula ac placerat pulvinar, est dolor aliquam sapien, id egestas ipsum ipsum a purus. Vestibulum diam ipsum, tempus et nibh vel, pretium facilisis nulla.
         </p>
-    </div>
-    <div class= "subtitle">
-        <h2>Education</h2>
-    </div>
-    <div class="paragraph">
         <p>
+            Project Description<br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet felis non tempor mattis. Etiam hendrerit, diam non lobortis tempor, nisl tellus rhoncus nulla, id efficitur neque ex sit amet lacus. Nam quis nunc neque. In tristique purus nunc, ut sagittis augue euismod et. Curabitur varius placerat sapien id euismod. Nulla eu porta leo, quis rhoncus leo. Etiam facilisis commodo elit, eget rhoncus nunc iaculis et. Aenean feugiat, ligula ac placerat pulvinar, est dolor aliquam sapien, id egestas ipsum ipsum a purus. Vestibulum diam ipsum, tempus et nibh vel, pretium facilisis nulla.
         </p>
-    </div>
-    <div id = "subtitle">
-        <h3>Contact:</h3>
-    </div>
-    <div>
-        <ul>
-            <li>LinkedIn: LINK PLACEHOLDER</li>
-            <li>Email: EMAIL@GMAIL.COM</li>
-        </ul>
     </div>
 </body>
 </html>
