message goes in between quotes here

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="script.js" defer></script>
     <title>Online Resume</title>
 </head>
 <body>
     <div id="head">
-        <a href="index.html"><h1>Kai Caothien</h1></a>
+
     </div>
     <div id="big_div">
-        <a href="index.html"><div class="items">Home</Menu></div></a>
+        <a href="index.html"><div class="items">Home</div></a>
         <a href="project.html"><div class="items">Project</div></a>
         <a href="resume.html"><div class="items">Resume</div></a>
     </div>
@@ -35,11 +37,8 @@
     <div id = "subtitle">
         <h3>Contact:</h3>
     </div>
-    <div>
-        <ul>
-            <li>LinkedIn: LINK PLACEHOLDER</li>
-            <li>Email: EMAIL@GMAIL.COM</li>
-        </ul>
+    <div id = "contact">
+        
     </div>
 </body>
 </html>
