--- a/resume.html
+++ b/resume.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="script.js" defer></script>
     <title>Resume</title>
 </head>
 
 <body>
     <div>
         <div id="head">
-            <a href="index.html"><h1>Kai Caothien</h1></a>
+
         </div>
         <div id="big_div">
-            <a href="index.html"><div class="items">Home</Menu></div></a>
+            <a href="index.html"><div class="items">Home</div></a>
             <a href="project.html"><div class="items">Project</div></a>
             <a href="resume.html"><div class="items">Resume</div></a>
         </div>
