--- a/project.html
+++ b/project.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="script.js" defer></script>
     <title>Project</title>
 </head>
 
 <body>
     <div id="head">
-        <a href="index.html"><h1>Kai Caothien</h1></a>
+
     </div>
     <div id="big_div">
         <a href="index.html"><div class="items">Home</Menu></div></a>
@@ -25,11 +27,11 @@
         <h3>Project 2</h3>
     </div>
     <div id="input">
-        <iframe src="" width="100%" height="500px"></iframe>
-        <iframe src="" width="100%" height="500px"></iframe>
+        <iframe src="https://kaiasc21.github.io/p5-game/" width="50%" height="500px"></iframe>
+        <iframe src="" width="50%" height="500px"></iframe>
     </div>
     <div id="div5">
-        <p>Link to project 1 <a href="resume.pdf">here</a>. Click and download it.</p>
+        <p>Link to project 1 <a href="https://kaiasc21.github.io/p5-game/">here</a>. Click and to view full screen.</p>
         <p>Link to project 2 <a href="resume.pdf">here</a>. Click and download it.</p>
     </div>
     <div id = "div4">
